# blog-fastapi

./: .env  pyproject.toml  requirements.txt
app/: main.py
app/controllers/: auth_controller.py  blog_controller.py  comment_controller.py  email_setting_controller.py  portfolio_controller.py  series_controller.py
app/core/: __init__.py  db_config.py  exceptions.py  settings.py
app/repositories/: blog_repository.py  comment_repository.py  email_settings_repository.py  portfolio_repository.py  series_repository.py  user_repository.py
app/routes/: __init__.py  auth_route.py  blog_route.py  comment_route.py  email_setting_routes.py  portfolio_routes.py  series_route.py
app/schemas/: blog_schema.py  common.py  email_settings_schema.py  portfolio_schema.py  series_schema.py  user_comment_schema.py  user_schema.py
app/services/: blog_service.py  cloudinary_service.py  comment_service.py  common_service.py  email_service.py  portfolio_service.py  series_service.py  user_service.py
app/templates/: contact_us.html
app/utils/: __init__.py  common.py  constants.py  visitor.py
